// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar correctamente el titulo personalizado 1`] = `
<span
  className="productDescription "
>
  Custom Product
</span>
`;

exports[`ProductTitle debe mostrar el nombre del producto por defecto 1`] = `
<div
  className="productCard "
>
  <span
    className="productDescription "
  >
    Taza Developer - Sin Imagen
  </span>
</div>
`;
